--- a/gzcTemplate2/contact.html
+++ b/gzcTemplate2/contact.html
@@ -25,16 +25,17 @@
       </div>
       <div class="menu_nav">
         <ul>
-          <li><a href="index.html"><span>Home Page</span></a></li>
-          <li><a href="support.html"><span>Support</span></a></li>
-          <li><a href="about.html"><span>About Us</span></a></li>
-          <li><a href="blog.html"><span>Blog</span></a></li>
-          <li class="active"><a href="contact.html"><span>Contact Us</span></a></li>
+          <li><a href="index.html"><span>首页</span></a></li>
+          <li><a href="support.html"><span>部门简介</span></a></li>
+          <li><a href="about.html"><span>政策法规</span></a></li>
+          <li><a href="blog.html"><span>办事指南</span></a></li>
+          <li class="active"><a href="contact.html"><span>相关下载</span></a></li>
+          <li><a href="blog.html"><span>支部工会</span></a></li>
         </ul>
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html"><span>Roope</span> <small>Company Slogan Here</small></a></h1>
+        <h1><a href="index.html"><span>西南大学</span> <small>国有资产管理处</small></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
