--- a/gzcTemplate2/blog.html
+++ b/gzcTemplate2/blog.html
@@ -34,7 +34,7 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html"><span>Roope</span> <small>Company Slogan Here</small></a></h1>
+        <h1><a href="index.html"><span>西南大学</span> <small>Company Slogan Here</small></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
