--- a/gzcTemplate2/index.html
+++ b/gzcTemplate2/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Roope</title>
+<title>国资处</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
-<script type="text/javascript" src="js/cufon-yui.js"></script>
+<!--<script type="text/javascript" src="js/cufon-yui.js"></script>-->
 <script type="text/javascript" src="js/droid_sans_400-droid_sans_700.font.js"></script>
 <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
@@ -34,7 +34,8 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html"><span>Roope</span> <small>Company Slogan Here</small></a></h1>
+<!--        <h1><a href="index.html"><span>西南大学</span> <small>国有资产管理处</small></a></h1>-->
+<!--        <h1><a href="index.html"><img src="images/logo.jpg"/></a> </h1>-->
       </div>
       <div class="clr"></div>
       <div class="slider">
@@ -92,7 +93,7 @@
         <div class="gadget">
           <h2 class="star"><span>Sponsors</span></h2>
           <div class="clr"></div>
-          <ul class="ex_menu">
+          <ul class="ex_menu"s>
             <li><a href="#">Lorem ipsum dolor</a><br />
               Donec libero. Suspendisse bibendum</li>
             <li><a href="#">Dui pede condimentum</a><br />
